added second page

--- a/src/test.html
+++ b/src/test.html
@@ -7,12 +7,7 @@
   </head>
   <body>
     <div class="desktop">
-      <div class="div">
-        <p class="text-wrapper">Welcome to our horse betting ai</p>
-        <div class="overlap-group">
-          <a href="test.html" class="text-wrapper-2">button</a>
-        </div>
-      </div>
+      <div class="div-wrapper"><div class="text-wrapper">embed live stream</div></div>
     </div>
   </body>
 </html>
