--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,17 @@
   <body>
     <div class="desktop">
       <div class="div">
-        <p class="text-wrapper">Welcome to our horse betting ai</p>
-        <div class="overlap-group">
-          <a href="test.html" class="text-wrapper-2">button</a>
+        <div class="text-wrapper">Horse Betting AI</div>
+        <div class="overlap">
+          <div class="text-wrapper-2">About</div>
+          <div class="text-wrapper-3">Live Streams</div>
+          <div class="text-wrapper-4">Betting</div>
+          <div class="text-wrapper-5">Contact Us</div>
         </div>
+        <div class="overlap-group">
+          <a href="test.html" class="text-wrapper-6">Start Here!</a>
+        </div>
+        <img class="untitled-design" src="img/untitled-design-1.png" alt="Horse Betting AI" />
       </div>
     </div>
   </body>
