--- a/src/index.html
+++ b/src/index.html
@@ -12,33 +12,13 @@
         <div class="overlap">
           <div class="text-wrapper-2">About</div>
           <div class="text-wrapper-3">Live Streams</div>
-          <div class="text-wrapper-4">Betting</div>
+            <a href="betting.html" class="text-wrapper-4">Betting</a>
           <div class="text-wrapper-5">Contact Us</div>
         </div>
         <div class="overlap-group">
           <a href="liveStream.html" class="text-wrapper-6">Start Here!</a>
         </div>
         <img class="untitled-design" src="img/logo.png" alt="Horse Betting AI" />
-        <script>
-          async function sendData() {
-            const data = [
-              { column1: 1, column2: 2 },
-              { column1: 3, column2: 4 }
-            ];
-            const response = await fetch('http://127.0.0.1:5000/process-data', {
-              method: 'POST',
-              headers: {
-                'Content-Type': 'application/json'
-              },
-              body: JSON.stringify(data)
-            });
-            const result = await response.json();
-            console.log(result);
-          }
-      
-          // Call the function to send data
-          sendData();
-        </script>
       </div>
     </div>
   </body>
